# distributed-system-thesis

./: .gitignore  Cargo.toml  README.md  docker-cleanup.sh  docker-compose.yml
client1/: Cargo.toml  Dockerfile
client1/src/: main.rs
client2/: Cargo.toml
client3/: Cargo.toml
core/: Cargo.toml  Dockerfile
core/src/: main.rs
visualizer/: .dockerignore  Dockerfile  README.md  package.json  server.js
visualizer/public/: app.js  index.html
